Remove unused /categories/name/<name> endpoint
